# bid-engine-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: allocation.rs  auction.rs  bid.rs  evaluation.rs  history.rs  lib.rs
